# purechance

./: LICENSE  README.md  pyproject.toml  version.py
.github/workflows/: ci.yml  release.yml
src/purechance/: __init__.py  cli.py  core.py
tests/: smoke_test.py  test_core.py
